# GraphQuery

./: .gitignore  CMakeLists.txt  README.md  run_dev.sh  test_core.py
claude_prompt/: write_system_paper.md
dataset/yeast/: yeast_ans.txt
docs/: answer_for_chatgpt.md  claude.md  index_artifact_spec.md  stage_a_mvp_tasks.md  system_description.tex  system_development_roadmap.md  technical_implementation_supplement.md
driver/: subgraph-cardinality-estimation.cc
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DatasetSelector.tsx  EvaluationDashboard.tsx  LiveCharts.tsx  ProgressBar.tsx  QueryGraphEditor.tsx  RankingLeaderboard.tsx  StatusBadge.tsx
frontend/src/hooks/: useSessionStream.ts
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
lib/Base/: BasicAlgorithms.h  Timer.h
lib/DataStructure/: Graph.h  config.h
lib/SpecialSubgraphs/: SmallCycle.h
lib/SubgraphCounting/: CandidateGraphSampling.h  CardinalityEstimation.h
lib/SubgraphMatching/: CandidateFilter.h  CandidateSpace.h  DataGraph.h  PatternGraph.h
pybind/: FastestPybind.cc
server/: main.py  models.py  requirements.txt  storage.py
server/routes/: datasets.py  sessions.py
server/services/: estimator_adapter.py  order_generator.py  prefix_builder.py  query_validator.py  score_aggregator.py  session_pipeline.py
tests/: test_api.py
